fix: dark mode primary color issue

--- a/web/src/styles/quasar-overrides.scss
+++ b/web/src/styles/quasar-overrides.scss
@@ -382,17 +382,17 @@ body {
   @include scrollbars;
 }
 
-.body--dark {
-  --q-primary: #5960b2;
-  --q-secondary: #5ca380;
-  --q-accent: #f5f5f5;
-  --q-positive: #5ca380;
-  --q-negative: #ec1414;
-  --q-info: #31ccec;
-  --q-warning: #f2c037;
-  --q-dark: #181a1b;
-  --q-dark-page: #181a1b;
-}
+// .body--dark {
+//   --q-primary: #5960b2;
+//   --q-secondary: #5ca380;
+//   --q-accent: #f5f5f5;
+//   --q-positive: #5ca380;
+//   --q-negative: #ec1414;
+//   --q-info: #31ccec;
+//   --q-warning: #f2c037;
+//   --q-dark: #181a1b;
+//   --q-dark-page: #181a1b;
+// }
 
 .q-layout__section--marginal {
   background: transparent;
